#DMS-47 developed migrate script to migrate data from old parts table
